pkg/lang/testdata/ub/types/invalid/optional-too-many-args.ub
optional(string, 1, 2)
